Improve wall and ceiling hit detection, add Block and BlockColumnGenerator classes for generating the map, make app fullscreen to remove Android ActionBar by adding a style,

--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -13,152 +13,14 @@
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-    <View
-            android:layout_width="19dp"
-            android:layout_height="2dp" android:id="@+id/bottom_hitbox"
-            app:layout_constraintTop_toBottomOf="@+id/player" android:layout_marginEnd="21dp"
-            app:layout_constraintEnd_toEndOf="@+id/player" app:layout_constraintStart_toStartOf="@+id/player"
-            android:layout_marginStart="19dp"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00001"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="ContentDescription" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00002"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00001"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00003"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00002"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00004"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00003" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00005"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00004" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00006"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00005" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00007"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00006" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00009"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00007" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00010"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00009" app:layout_constraintBottom_toTopOf="@+id/dirt00001"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00011"
-            tools:ignore="ContentDescription"
-            app:layout_constraintBottom_toTopOf="@+id/dirt00005" app:layout_constraintStart_toEndOf="@+id/grass00010"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00012"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00011" app:layout_constraintBottom_toTopOf="@+id/dirt00007"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00013"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00012" android:layout_marginBottom="1dp"
-            app:layout_constraintBottom_toTopOf="@+id/dirt00010"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/grass" android:id="@+id/grass00014"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="ContentDescription"
-            android:layout_marginStart="120dp" app:layout_constraintBottom_toTopOf="@+id/grass00003"
-            android:layout_marginBottom="120dp"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/dirt" android:id="@+id/dirt00001"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00009" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/dirt" android:id="@+id/dirt00002"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/dirt00001" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/dirt" android:id="@+id/dirt00003"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/dirt00002" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/dirt" android:id="@+id/dirt00004"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/dirt00003" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/dirt" android:id="@+id/dirt00005"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/dirt00001" app:layout_constraintBottom_toTopOf="@+id/dirt00002"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/dirt" android:id="@+id/dirt00006"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/dirt00005" app:layout_constraintBottom_toTopOf="@+id/dirt00003"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/dirt" android:id="@+id/dirt00007"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00011" app:layout_constraintBottom_toTopOf="@+id/dirt00006"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/dirt" android:id="@+id/dirt00008"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/dirt00006" app:layout_constraintBottom_toTopOf="@+id/dirt00004"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/dirt" android:id="@+id/dirt00009"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/dirt00007" app:layout_constraintBottom_toTopOf="@+id/dirt00008"/>
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/dirt" android:id="@+id/dirt00010"
-            tools:ignore="ContentDescription"
-            app:layout_constraintStart_toEndOf="@+id/grass00012" app:layout_constraintBottom_toTopOf="@+id/dirt00009"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.78"/>
     <RelativeLayout
             android:orientation="vertical"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:id="@+id/indicator_box" android:visibility="visible"
-            app:layout_constraintTop_toTopOf="@+id/player" app:layout_constraintStart_toStartOf="@+id/player"
-            app:layout_constraintBottom_toBottomOf="@+id/player" app:layout_constraintEnd_toEndOf="@+id/player">
+            android:id="@+id/block_layout" android:visibility="visible"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
