--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -23,4 +23,12 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
     </RelativeLayout>
+    <TextView
+            android:text="0000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/distance_score"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:contentDescription="@string/distance_score" android:fontFamily="@font/score"
+            android:textAlignment="center" android:textSize="20sp" android:textColor="#000000"
+            app:autoSizeTextType="uniform"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
