Update onGround detection to handle various block sizes, implement coins as Blocks, are some issues with invisible walls now.

--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -31,4 +31,25 @@
             android:contentDescription="@string/distance_score" android:fontFamily="@font/score"
             android:textAlignment="center" android:textSize="20sp" android:textColor="#000000"
             app:autoSizeTextType="uniform"/>
+    <LinearLayout
+            android:layout_width="148dp"
+            android:layout_height="29dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/right_menu">
+        <ImageView
+                android:layout_width="2dp"
+                android:layout_height="22dp" app:srcCompat="@drawable/coin_frog" android:id="@+id/coin_icon"
+                android:layout_weight="1"/>
+        <TextView
+                android:text="0"
+                android:layout_width="0dp"
+                android:layout_height="match_parent" android:id="@+id/coin_count" android:layout_weight="1"
+                android:fontFamily="@font/score"
+                app:autoSizeTextType="uniform" android:textAlignment="center"/>
+        <ImageView
+                android:layout_width="15dp"
+                android:layout_height="25dp" app:srcCompat="@drawable/button_pause"
+                android:id="@+id/pause_button"
+                android:layout_weight="1" android:baselineAlignBottom="false"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
