--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity" android:id="@+id/title_layout">
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" app:srcCompat="@drawable/menu" android:id="@+id/title_screen"
@@ -18,9 +18,78 @@
             android:text="@string/start"
             android:layout_width="237dp"
             android:layout_height="50dp" android:id="@+id/start"
+            android:stateListAnimator="@null"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.52"
             android:onClick="startGame"/>
+    <Button
+            android:text="@string/shop"
+            android:layout_width="237dp"
+            android:layout_height="50dp" android:id="@+id/shop"
+            android:stateListAnimator="@null"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.7"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:onClick="openShop"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="709dp"
+            android:layout_height="390dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="@+id/title_screen"
+            android:id="@+id/shop_box" android:background="@drawable/gui_box" android:visibility="gone">
+        <RelativeLayout
+                android:layout_width="140dp"
+                android:layout_height="300dp" android:id="@+id/panel1"
+                android:visibility="visible"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.3" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.07"
+                android:background="@drawable/gui_panel"/>
+        <RelativeLayout
+                android:layout_width="140dp"
+                android:layout_height="300dp" android:id="@+id/panel2"
+                android:visibility="visible"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.3" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.3565"
+                android:background="@drawable/gui_panel"/>
+        <RelativeLayout
+                android:layout_width="140dp"
+                android:layout_height="300dp" android:id="@+id/panel3"
+                android:visibility="visible"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.3" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.6435"
+                android:background="@drawable/gui_panel"/>
+        <RelativeLayout
+                android:layout_width="140dp"
+                android:layout_height="300dp" android:id="@+id/panel4"
+                android:visibility="visible"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.3" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.93"
+                android:background="@drawable/gui_panel"/>
+        <ImageView
+                android:layout_width="85dp"
+                android:layout_height="40dp" app:srcCompat="@android:drawable/editbox_dropdown_dark_frame"
+                android:id="@+id/shop_back"
+                android:scaleType="fitXY"
+                app:layout_constraintTop_toBottomOf="@+id/panel2" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.3" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.42"/>
+        <ImageView
+                android:layout_width="85dp"
+                android:layout_height="40dp" app:srcCompat="@android:drawable/editbox_dropdown_dark_frame"
+                android:id="@+id/shop_next"
+                android:scaleType="fitXY"
+                app:layout_constraintTop_toBottomOf="@+id/panel2" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.3" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.58"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
