--- a/app/src/main/res/layout/results_activity.xml
+++ b/app/src/main/res/layout/results_activity.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content" android:id="@+id/results_screen"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            android:contentDescription="@string/results_screen"/>
+            android:contentDescription="@string/results_screen" android:scaleType="fitXY"/>
     <ImageView
             android:src="@drawable/frog"
             android:layout_width="73dp"
