Add background and clouds to main game, background color shifts based on distance, clouds have random models,sizes, speeds, and location spawns.

--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -5,7 +5,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".GameActivity" android:id="@+id/background">
+        tools:context=".GameActivity" android:id="@+id/constraint_bg">
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/background">
+
+    </RelativeLayout>
     <RelativeLayout
             android:orientation="vertical"
             android:layout_width="60dp"
