--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -34,11 +34,55 @@
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:onClick="openShop"/>
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" tools:layout_editor_absoluteY="106dp"
+            tools:layout_editor_absoluteX="43dp" android:id="@+id/login_layout"
+            android:background="@drawable/dark_filter" android:visibility="gone">
+
+        <ImageView
+                android:layout_width="327dp"
+                android:layout_height="188dp" app:srcCompat="@drawable/gui_panel" android:id="@+id/login_box"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" android:scaleType="fitXY"/>
+        <com.google.android.gms.common.SignInButton
+                android:id="@+id/sign_in_button"
+                android:layout_width="208dp"
+                android:layout_height="54dp"
+                android:foreground="@drawable/login_google"
+                app:layout_constraintTop_toTopOf="@+id/login_box"
+                app:layout_constraintBottom_toBottomOf="@+id/login_box"
+                app:layout_constraintStart_toStartOf="@+id/login_box"
+                app:layout_constraintEnd_toEndOf="@+id/login_box"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="709dp"
             android:layout_height="390dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="@+id/title_screen"
             android:id="@+id/shop_box" android:background="@drawable/gui_box" android:visibility="gone">
+        <LinearLayout
+                android:layout_width="138dp"
+                android:layout_height="30dp"
+                android:id="@+id/shop_balance"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/shop_back"
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@+id/panel1"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.22"
+                app:layout_constraintHorizontal_bias="0.55">
+            <ImageView
+                    android:layout_width="2dp"
+                    android:layout_height="22dp" app:srcCompat="@drawable/coin_frog" android:id="@+id/shop_coin_icon"
+                    android:layout_weight="1"/>
+            <TextView
+                    android:text="0"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent" android:id="@+id/shop_coin_count" android:layout_weight="1"
+                    android:fontFamily="@font/score"
+                    android:maxLines="1"
+                    app:autoSizeTextType="uniform" android:textAlignment="center"/>
+        </LinearLayout>
         <RelativeLayout
                 android:layout_width="140dp"
                 android:layout_height="300dp" android:id="@+id/panel1"
@@ -74,7 +118,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_bias="0.3" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.93"
-                android:background="@drawable/gui_panel"/>
+                android:background="@drawable/gui_panel">
+        </RelativeLayout>
         <ImageView
                 android:layout_width="85dp"
                 android:layout_height="40dp" app:srcCompat="@android:drawable/editbox_dropdown_dark_frame"
