--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -33,6 +33,14 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.7"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:onClick="openShop"/>
+    <Button
+            android:text="@string/settings"
+            android:layout_width="237dp"
+            android:layout_height="50dp" android:id="@+id/settings"
+            app:layout_constraintTop_toTopOf="@+id/title_screen"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.88"
+            android:onClick="openSettings" android:stateListAnimator="@null"/>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent" tools:layout_editor_absoluteY="106dp"
